--- a/css/css.css
+++ b/css/css.css
@@ -31,9 +31,7 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-body {
-	line-height: 1;
-}
+
 ol, ul {
 	list-style: none;
 }
@@ -64,17 +62,23 @@ td {
 }
 
 
+#header {
+	
+	
+	
+	
+	}
+
+
 /*fixar en bakgrund*/
 #container {
-	background: url(pics/portfolio.PNG);
+	background: url(pics/portfolio3.png);
 	overflow: hidden;
 	width: auto;
-	height:auto;
+	height:1000px;
 	
 	margin:0 auto;
-	
-	
-	border: groove 6px #666666;
+	border-bottom: groove 4px #FFFFFF;
 	
 	
 	
@@ -82,44 +86,18 @@ td {
 
 }	
 
-# footer {
-	clear:both;
-	width:auto;
-	
-	}
-	
-h1	{
-	text-align:center;
 	
 
 
-}
 
 
-#content {
-	background-color: rgba(500,500,500,0.6);
-	width:1800px;
-	height: 800px;
-	max-height:800px;
-	color:#FFFFFF;
-	overflow:hidden;
-	margin:0 auto;
-	border-radius:20px;
-	margin-top: 30px;
-	margin-bottom:30px;
-	border:2px solid white;
-	
-	}
-	
-	#content fieldset{
-	border-bottom:2px solid white;
-}
+
 
 
 #content1 {
 	width:1500px;
-	height: 800px;
-	max-height: 800px;
+	height: 1000px;
+	
 	color:#FFFFFF;
 	overflow:hidden;
 	margin:0 auto;
@@ -129,33 +107,77 @@ h1	{
 	
 	
 	}
-
-/* gjort en pil för att komma till start sidan av min portfolio*/
-.arrow-down {
-width: 0px;
-height: 0px;
-border-style: solid;
-border-width: 173.2px 100px 0 100px;
-border-color: rgba(50,50,50,0.6) transparent transparent transparent;
-position:fixed;
-	top: 150px;
-	left:900px;
 	
-
-}
-
-
-.arrow-down:hover {
-	width: 0px;
-height: 0px;
-border-style: solid;
-border-width: 173.2px 100px 0 100px;
-border-color: #000 transparent transparent transparent;
-position:fixed;
-	top: 150px;
-	left:900px;
+h2 {
+	font-family: segoe script;
+	font-size:30px;
+	margin-top: 50px;
+	margin-left:50px;
 	
 	}
+
+p {
+	font-family:"Times New Roman", Times, serif;
+	font-size: 18px;
+	margin-right:300px;
+	margin-top:60px;
+	max-width:400px;
+	float:right;
+	
+	}
+	
+.me {
+	background-image: url(pics/me.png);
+	height:250px;
+	width:178px;
+	display:block;
+	float:left;
+    
+	background-position:0 -20px;
+	margin-top: 114px;
+	}
+	
+.me:hover {
+	background-image:url(pics/hoverme.png);
+	display:block;
+	background-position: 0 -20px;
+	height: 
+	
+	
+	}
+	
+.bario {
+	background-image: url(pics/bario.png);
+	height:178px;
+	width:182px;
+	display:block;
+	margin-right:1100px;
+	background-position: 0 180px;
+	
+	float:right;
+	
+	}
+	
+.hemsida {
+	background-image: url(pics/hemsida.png);
+	height:177px;
+	width:182px;
+	display:block;
+	margin-right:130px;
+	background-position:-6px 180px;
+	margin-top:40px;
+	
+	float:left;
+	
+	
+	}
+
+
+	
+
+
+
+
 
 
 
@@ -185,21 +207,24 @@ position:fixed;
 	margin-left:700px;
 	
 	}
-
-
-.port {
-	margin-top: 150px;
-	margin-left:150px;
-	width:  500px;
-    height: 360px;
+	
+#bildspel {
+	    margin-top: 200px;
+        margin-left:400px;
+        width:454px;
+    height: 533px;
     display: block;
-	background-image:url(pics/hover.png);
-	background-position:500px 0;
-}
-
-.port:hover {
-	background-position:-10px 0;
+        
+        background-position:450px 0;
 	}
+	
+#bario {
+	margin-top:50px;
+	
+	}
+
+
+
 	
 
 	
@@ -218,13 +243,106 @@ position:fixed;
 	overflow:hidden;
 	
 	}
-
-
-
 	
 	
 	
 
+
+
+
+# footer {
+	clear:both;
+	width:auto;
+	
+	}
+	
+	
+	
+
+	
+nav {
+	padding-top:200px;
+	float:left;
+	border-bottom:none;
+	
+	}
+	
+ul, li {
+	margin:0;
+    padding:0;
+    
+	
+
+	
+	}
+	
+ul li {
+	background-color:#3B364F;
+	border: solid 1px white;
+	width:283px;
+	cursor: pointer;
+
+    list-style:none;
+	}	
+	
+ul li:hover {
+	background-color:#8c8ba4;
+	position:relative;
+	color:#000000;
+	
+	}
+	
+li a {
+	display:block;
+	list-style:none;
+	font-family: shruti;
+	font-size:18px;
+	padding: 10px;
+	
+	}
+	
+nav .active a {
+	background-color:#CCCCCC;
+  	width:253px;
+	
+	}
+ul li a {
+	padding:10px 15px;
+	color:#FFF;
+	
+	text-decoration: none;
+	}	
+	
+/*Flyout*/
+
+
+ul li ul {
+	position:absolute;
+	display:none;
+	
+	}
+	
+ul li:hover ul {
+	left:283px;
+	top:0px;
+	display:block;
+	width:150px;
+	
+	}	
+	
+ul li ul li {
+	background-color:#3B364F;
+	
+	
+	}	
+	
+ul li ul li a {
+	color:# FFF;
+	
+	width:120px;
+	
+	}	
+	
 
 	
 	
