--- a/css/css.css
+++ b/css/css.css
@@ -67,12 +67,14 @@ td {
 	
 	
 	
+	
 	}
 
 
 /*fixar en bakgrund*/
-#container {
-	background: url(pics/portfolio3.png);
+body {
+	background: url(pics/hemsida2.png);
+	background-repeat:no-repeat;
 	overflow: hidden;
 	width: auto;
 	height:1000px;
@@ -95,123 +97,116 @@ td {
 
 
 #content1 {
-	width:1500px;
+	max-width:1500px;
+ 
 	height: 1000px;
 	
 	color:#FFFFFF;
 	overflow:hidden;
-	margin:0 auto;
-	margin-top: 30px;
+	
 	margin-bottom:30px;
 	border-radius:20px;
+			
 	
 	
 	}
 	
+	
+h1 {
+	font-family: shruti;
+	font-size: 50px;
+	color:#FFFFFF;
+	font-weight:900;
+	margin-bottom: -33px;
+	margin-left: 45px;
+	
+	
+
+}
+	
+	
+	
 h2 {
+	font-family: shruti;
+	font-size:30px;
+	color: #C2CBDD;
+	
+	margin-left:45px;
+
+}
+
+	
+h3 {
 	font-family: segoe script;
 	font-size:30px;
 	margin-top: 50px;
-	margin-left:50px;
-	
+	margin-left:150px;
+	width:50%;
+	display:inline-block;
 	}
+	
 
 p {
 	font-family:"Times New Roman", Times, serif;
 	font-size: 18px;
-	margin-right:300px;
 	margin-top:60px;
 	max-width:400px;
 	float:right;
+	height:100%;
 	
 	}
 	
-.me {
-	background-image: url(pics/me.png);
-	height:250px;
-	width:178px;
-	display:block;
+
+	
+	
+
+.me img {
+	margin-left:15px;
+	display:inline;
+	margin-top:70px;
+	
 	float:left;
+	
     
-	background-position:0 -20px;
-	margin-top: 114px;
-	}
-	
-.me:hover {
-	background-image:url(pics/hoverme.png);
-	display:block;
-	background-position: 0 -20px;
-	height: 
-	
 	
 	}
 	
-.bario {
-	background-image: url(pics/bario.png);
-	height:178px;
-	width:182px;
-	display:block;
-	margin-right:1100px;
-	background-position: 0 180px;
+.me img:hover {
+	opacity: 0.6;
 	
+	
+	
+	
+	
+	}
+	
+
+
+
+	
+
+
+
+
+
+
+#uggla {
+	
+	height: 186px;
+	width: 124px;
 	float:right;
-	
-	}
-	
-.hemsida {
-	background-image: url(pics/hemsida.png);
-	height:177px;
-	width:182px;
+	margin-top: 500px;
+	margin-right: 260px;
 	display:block;
-	margin-right:130px;
-	background-position:-6px 180px;
-	margin-top:40px;
-	
-	float:left;
 	
 	
-	}
-
-
 	
-
-
-
-
-
-
-
-.arrow-back {
-	width: 0; 
-	height: 0; 
-	border-style: solid;
-	border-top: 40px solid transparent;
-	border-bottom: 40px solid transparent; 
-	
-	border-right:40px solid rgba(50,50,50,0.6);
-	
-	margin-top: 5px;
-	margin-left:700px;
 }
-
-.arrow-back:hover {
-	width: 0; 
-	height: 0; 
-	border-style: solid;
-	border-top: 40px solid transparent;
-	border-bottom: 40px solid transparent; 
-	
-	border-right:40px solid  #000;
-	
-	margin-top: 5px;
-	margin-left:700px;
-	
-	}
 	
 #bildspel {
-	    margin-top: 200px;
-        margin-left:400px;
-        width:454px;
+	margin-top: 200px;
+    margin-left:40px;
+    width:454px;
     height: 533px;
     display: block;
         
@@ -261,7 +256,7 @@ p {
 
 	
 nav {
-	padding-top:200px;
+	padding-top:150px;
 	float:left;
 	border-bottom:none;
 	
@@ -285,10 +280,10 @@ ul li {
     list-style:none;
 	}	
 	
-ul li:hover {
+ul li:hover, .active ul li:hover a {
 	background-color:#8c8ba4;
 	position:relative;
-	color:#000000;
+	color:#ffffff;
 	
 	}
 	
@@ -303,6 +298,13 @@ li a {
 	
 nav .active a {
 	background-color:#CCCCCC;
+  	width:253px;
+	
+	}
+	
+	
+nav .active ul li a {
+	background-color:#3B364F;
   	width:253px;
 	
 	}
