--- a/css/css.css
+++ b/css/css.css
@@ -71,7 +71,11 @@ td {
 	}
 
 
-/*fixar en bakgrund*/
+/*fixar en bakgrund
+gör så att inte bakrundsbilder upprepas
+sätter automatisk brädd
+1000px hög
+och en border i botten*/
 body {
 	background: url(pics/hemsida2.png);
 	background-repeat:no-repeat;
@@ -94,7 +98,7 @@ body {
 
 
 
-
+/*här gör jag inget specielt, fixar storleken på min content, färg och lite skjusteringar*/
 
 #content1 {
 	max-width:1500px;
@@ -105,13 +109,111 @@ body {
 	overflow:hidden;
 	
 	margin-bottom:30px;
-	border-radius:20px;
+	
 			
 	
 	
 	}
 	
+/*väljer typsnitt
+storlek på text
+färg*/	
+h4 {
+	font-family: shruti;
+	font-size:30px;
+	color: #FFF;
 	
+	margin-left:70px;
+	
+	}
+	
+/*väljer typsnitt
+storlek på text
+färg
+flot left, gör att den håller till vänster*/
+p {
+	font-family:"Times New Roman", Times, serif;
+	font-size: 18px;
+	margin-top:60px;
+	margin-left:70px;
+	max-width:400px;
+	float:left;
+	
+	
+	}
+	
+
+/* har gjort en div som p och h4 sitter i, så jag kan bestämma var texterna ska va och inom vilken ram.*/	
+#pres {
+	margin-left: 150px;
+	height:500px;
+	max-width: 500px;
+	border: 2px solid #FFF;
+	
+	
+	
+	
+	}
+	
+	
+/* har gjort en div som p och h5 sitter i, så jag kan bestämma var texterna ska va och inom vilken ram.*/	
+#jag {
+	
+	margin-left: 150px;
+	height:700px;
+	max-width: 500px;
+	border: 2px solid #FFF;
+	float:left;
+	
+	}
+	
+	
+/* En bild på mig
+hur stor den ska va
+vilken position bilden ska ha i min valda ruta*/	
+#jonte {
+	background-image:url(pics/jonte.jpg);
+	float:right;
+	overflow:auto;
+	width:300px;
+	height:300px;
+	margin-right:150px;
+	background-position: -40px 0;
+	
+	}
+	
+/*text typ
+storlek
+färg
+*/	
+h5 {
+	font-family: shruti;
+	font-size:25px;
+	color: #FFF;
+	margin-top:260px;
+	
+	margin-left:70px;
+	
+	}
+
+/*Mitt formulär
+hur stort det ska va och att den ska ha en border*/		
+#kontakt {
+	
+	max-width:400px;
+	margin-left: 50px;
+	margin-top: 100px;
+	border:#FFFFFF solid 2px;
+
+}
+
+	
+	
+/*text typ
+storlek
+färg
+tjocklek
+*/		
 h1 {
 	font-family: shruti;
 	font-size: 50px;
@@ -125,7 +227,10 @@ h1 {
 }
 	
 	
-	
+/*text typ
+storlek
+färg
+*/	
 h2 {
 	font-family: shruti;
 	font-size:30px;
@@ -135,7 +240,11 @@ h2 {
 
 }
 
-	
+/*text typ
+storlek
+färg
+tjocklek
+*/		
 h3 {
 	font-family: segoe script;
 	font-size:30px;
@@ -143,23 +252,18 @@ h3 {
 	margin-left:150px;
 	width:50%;
 	display:inline-block;
+	font-weight:900;
 	}
 	
 
-p {
-	font-family:"Times New Roman", Times, serif;
-	font-size: 18px;
-	margin-top:60px;
-	max-width:400px;
-	float:right;
-	height:100%;
-	
-	}
+
 	
 
 	
 	
+/*bilder på vad jag gjort ligger här fast i html koden
 
+*/	
 .me img {
 	margin-left:15px;
 	display:inline;
@@ -170,26 +274,17 @@ p {
     
 	
 	}
-	
+/*Sätter så att bilderna får en genomskilnighet när musen är över
+*/		
 .me img:hover {
 	opacity: 0.6;
 	
-	
-	
-	
-	
-	}
+}
 	
 
+/*Sätter höjd och brädd på min uggla bild
 
-
-	
-
-
-
-
-
-
+*/
 #uggla {
 	
 	height: 186px;
@@ -198,63 +293,58 @@ p {
 	margin-top: 500px;
 	margin-right: 260px;
 	display:block;
-	
-	
-	
+		
 }
+
+
+/*Sätter höjd och brädd på min uggla bild nr 2
+
+*/
+#uggla1 {
+	
+	height: 186px;
+	width: 124px;
+	float:right;
+	margin-top: 25px;
+	margin-right: 260px;
+	display:block;
+
+}
+
+/*här i ligger bilder på vad jag gjort och länkar (i html) 
+dem ska hålla åt vänster
+max brädd
+
+*/
+#bilder {
+
+	float:left;
+	max-width:600px;
+
+}
+
+/* vart min bildspel ska vara. och hur stort.
+
+*/
 	
 #bildspel {
-	margin-top: 200px;
-    margin-left:40px;
+	margin-top: 55px;
+    margin-left:60px;
     width:454px;
     height: 533px;
     display: block;
         
         background-position:450px 0;
 	}
-	
-#bario {
-	margin-top:50px;
-	
-	}
 
+/* MIn meny
+i här har jag fixat färger text typer text storlekar, hur stor menyn ska va,
+att den ska ha en border, att den ska byta färg vid hover och active.
+Storlekar på knappar
 
-
-	
-
-	
-#spel {
-	width:100%;
-	
-	}
-	
-#spel1 {
-	margin-left:500px;
-	width:400px;
-	height:600px;
-	
-	
-	margin-top:70px;
-	overflow:hidden;
-	
-	}
-	
-	
+*/
 	
 
-
-
-
-# footer {
-	clear:both;
-	width:auto;
-	
-	}
-	
-	
-	
-
-	
 nav {
 	padding-top:150px;
 	float:left;
@@ -314,8 +404,11 @@ ul li a {
 	
 	text-decoration: none;
 	}	
+
 	
-/*Flyout*/
+/*Flyout
+Har gjort en flyout meny till mina vidare länkar.
+Jag hade viljat göra mitt bildespel klickbart när den bilden man ville se mer på kom up, så istället gjorde jag en flyout meny*/
 
 
 ul li ul {
@@ -345,6 +438,61 @@ ul li ul li a {
 	
 	}	
 	
+/*Fixat så min footer ligger längst ner
+storlek på den
+och färg 
 
+*/	
+#footer {
+	color:#FFF;
+	position:absolute;
+   bottom:-98px;
+   width:100%;
+   height:30px;   
+   background:#3B364F;
+
+}
 	
+/*Gjort en duglig utskrivnings format
+tillexempel att uggla bilden ska inte synas då den bara är layout
+ 
+
+*/
+@media print {
+	
+#uggla {
+	display:none;
+	
+	}
+ 
+
+nav {
+	display:none;}
+
+#container {
+	border:none;
+	height:auto;}
+	
+body:after { content:}
+body { font-family: Georgia, Times, serif; font-size: 10pt; }
+
+
+
+
+
+
+
+
+a:link:after{content:"["attr(href)"]";}
+
+#labb {
+	display:none;}
+	
+#footer {
+	display:none;
+	
+	}
+
+
+}	
 	
